# cmake-keytar

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  circle.yml  posix-ci.sh
src/: keytar.h  keytar_common.cc
test/: keytar_test.cc  minunit.h
